--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.15.10",
-        "@mui/x-data-grid": "^6.19.4"
+        "@mui/x-data-grid": "^6.19.4",
+        "react-icons": "^5.0.1",
+        "react-toastify": "^10.0.4"
     }
 }
